# Pascal-Compiler

./: test_output.txt  .gitignore  ANONYMOUS_FUNCTIONS_STATUS.md  BENCHMARK_SUMMARY.md  BUGFIX_CYGWIN_CRASH.md  BUGFIX_REPORT.md  BUILD.md  CLAUDE.md  CPARSER_INTEGRATION.md  CROSS_COMPILE_TESTING.md  FPC_BOOTSTRAP_ACTUAL_TEST.md  FPC_BOOTSTRAP_ANALYSIS.md  FPC_BOOTSTRAP_INVESTIGATION.md  FPC_FULL_BOOTSTRAP_TEST.md  GRAMMAR_TODO.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_SUPPORT.md  LEGACY_MIGRATION_STATUS.md  LICENSE  MIGRATION_NEXT_STEPS.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  PARSER_PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASES_4_5_6_ANALYSIS.md  PHASE_2_AND_3_COMPLETION.md  PHASE_2_AND_3_SUMMARY.md  PHASE_6_COMPLETE.md  PHASE_6_STATUS.md  PHASE_6_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  VIRTUAL_METHODS_STATUS.md  VMT_IMPLEMENTATION_PLAN.md  VMT_TECHNICAL_DESIGN.md  btpc  btpc.dpr  (+68 more)
GPC/: benchmark.c  benchmark.h  cparser_adapter.c  cparser_adapter.h  cparser_frontend.c  cparser_frontend.h  debug_deserializer.c  debug_deserializer.h  debug_flat_ast_printer.c  debug_flat_ast_printer.h  debug_serializer.c  debug_serializer.h  empty_block.s  flags.c  flags.h  flat_ast_printer_main.c  format_arg.h  harness.c  hello_print.s  hello_world.s  helloworld  helloworld.s  identifier_utils.h  ir.h  lexer_test.c  main.c  main_cparser.c  makefile  meson.build  orchestrator.sh  parser_main.c  procedure_test.s  runtime.c  runtime_gmp.c  runtime_internal.h  runtime_unix.c  semantic_checker_main.c  semcheck_main.c  sign_test  sign_test.s  (+10 more)
GPC/CodeGenerator/: makefile
GPC/CodeGenerator/Intel_x86-64/: builtin.c  builtin.h  codegen.c  codegen.h  codegen_builtins.c  codegen_builtins.h  codegen_expression.c  codegen_expression.h  codegen_statement.c  codegen_statement.h  expr_gen.c  expr_gen.h  graph_coloring_allocator.c  graph_coloring_allocator.h  register_types.h  stmt_gen.c  stmt_gen.h
GPC/CodeGenerator/Intel_x86-64/expr_tree/: expr_tree.c  expr_tree.h
GPC/CodeGenerator/Intel_x86-64/stackmng/: stackmng.c  stackmng.h
GPC/CodeGenerator/new_codegen/: flat_ir_generator.c  flat_ir_generator.h  ir_generator.c  ir_generator.h  register_allocator.c  register_allocator.h  symbol_table.c  symbol_table.h  x86_64_codegen.c  x86_64_codegen.h
GPC/Optimizer/: mark_used.c  mark_used.h  optimizer.c  optimizer.h  pass_manager.h
GPC/Parser/: ErrVars.h  ParsePascal.c  ParsePascal.h  flat_ast.h  makefile  parser_error.c  parser_error.h  pascal_frontend.c  pascal_frontend.h
GPC/Parser/LexAndYacc/: Grammar.output  Grammar.tab.c  Grammar.tab.h  Grammar.y  Tokenizer.l  lex.yy.c  lex.yy.l  makefile  tokens.h
GPC/Parser/List/: List.c  List.h
GPC/Parser/ParseTree/: GpcType.c  GpcType.h  from_cparser.c  from_cparser.h  generic_types.c  generic_types.h  operator_registry.h  tree.c  tree.h  tree_types.h  type_tags.h
GPC/Parser/SemanticCheck/: NameMangling.c  NameMangling.h  SemCheck.c  SemCheck.h  flat_sem_check.c  flat_sem_check.h  mangle.c  mangle.h
GPC/Parser/SemanticCheck/HashTable/: HashTable.c  HashTable.h  UnitTest.c
GPC/Parser/SemanticCheck/SemChecks/: SemCheck_expr.c  SemCheck_expr.h  SemCheck_stmt.c  SemCheck_stmt.h
GPC/Parser/SemanticCheck/SymTab/: SymTab.c  SymTab.h
GPC/TestPrograms/: empty_block.p  example_dont_run.p  hello_print.p  hello_world.p  hello_world.s  minimal_test.p  mixed_write_test.p  numeric_output.p  output_test.p  printf_test.p  printf_test.s  procedure_test.p  program2.p  sign_test.p  simple_assign.p  simple_write_test.p  simple_write_test.s  write_var_test.p
GPC/TestPrograms/CodeGeneration/: refactor_test.p  t0.s  t10-1.p  t10-2.p  t10.p  t10a.p
GPC/TestPrograms/General/: test-1.p  test-2.p
GPC/TestPrograms/Over/: overload_test.p
GPC/TestPrograms/Semantic/: t1-1a.p  t2-3.p  t3-2.p  t3-4.p  t4-1.p  t5-3.p  t6-2.p  test-semantic.p
GPC/Units/: crt.p  ctypes.p  fgl.p  gmp.p  math.p  stringutils.p  sysutils.p  unix.p  windows.p
GPC/common/: casefold.h
KGPC/: README.txt  common_utils.h  compilation_context.c  compilation_context.h  debug_deserializer.c  debug_serializer.c  debug_serializer.h  flags.c  flags.h  format_arg.h  harness.c  identifier_utils.h  main.c  main_cparser.c  meson.build  preprocess_main.c  runtime.c  runtime_baseunix.c  runtime_baseunix_internal.h  runtime_fpc_abstract_stubs.S  runtime_fpc_assign.c  runtime_fpc_init.c  runtime_fpc_interlocked_aliases.c  runtime_fpc_pchar_to_shortstr.c  runtime_fpc_pchar_to_shortstr.inc  runtime_fpc_pchar_to_shortstr_upper.c  runtime_fpc_rtl_compat.S  runtime_fpc_thread_symbols.S  runtime_fpchmod.c  runtime_fpclose.c  runtime_fpclose_i.c  runtime_fpgetcwd.c  runtime_fplseek.c  runtime_fpopen.c  runtime_fpopen_i_i_i.c  runtime_fpread.c  runtime_fpwrite.c  runtime_gmp.c  runtime_internal.h  runtime_olevariant_assign.c  (+12 more)
KGPC/CodeGenerator/Intel_x86-64/: asm_emit.h  codegen.c  codegen.h  codegen_builtins.c  codegen_builtins.h  codegen_expression.c  codegen_expression.h  codegen_record_helpers.h  codegen_statement.c  codegen_statement.h  codegen_stmt_internal.h  register_types.h
KGPC/Optimizer/: mark_used.c  mark_used.h  optimizer.c  pass_manager.c  pass_manager.h
KGPC/Parser/: ErrVars.h  ParsePascal.h  parser_error.c  parser_error.h  pascal_frontend.c  pascal_frontend.h
KGPC/Parser/List/: List.h
KGPC/Parser/ParseTree/: KgpcType.c  KgpcType.h  from_cparser.c  from_cparser.h  from_cparser_internal.h  generic_types.c  generic_types.h  ident_ref.c  ident_ref.h  operator_registry.c  tree.c  tree.h  tree_types.h  type_tags.h
KGPC/Parser/SemanticCheck/: NameMangling.c  NameMangling.h  SemCheck.c  SemCheck.h  SemCheck_Internal.h  SemCheck_decls.c  SemCheck_internal.h  SemCheck_subprogram.c
KGPC/TestPrograms/: sign_test.p
KGPC/Units/: baseunix.p  charset.p  classes.p  crt.p  cthreads.p  ctypes.p  dateutils.p  dynlibs.p  errors.p  fgl.p  gmp.p  keyboard.p  linux.p  math.p  objpas.p  prelude.p  sortbase.p  stringutils.p  sysconst.p  system.p  system.s  sysutils.p  termio.p  typinfo.p  unix.p  unixtype.p  windows.p
(+1841 files in other folders)
